@@ -4,6 +4,8 @@ Release Notes
 HEAD, planned as v0.22
 - Improved the RAM/ROM data loader. Now binary files and Intel HEX files are
   supported.
+- A dual-port multi-byte memory has been added that allows single bytes to
+  be overwritten.
 
 v0.21, released on 10. Dec 2018
 - Added a simple SVG importer to define custom shapes.
